--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -4,6 +4,14 @@
         android:id="@+id/menu_settings"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/menu_settings"/>
+        android:icon="@android:drawable/ic_menu_preferences"
+        android:title="@string/settings"/>
+    
+    <item
+        android:id="@+id/menu_about"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:icon="@android:drawable/ic_menu_preferences"
+        android:title="@string/about"/>
 
 </menu>
